// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`关键词标签 1`] = `
Array [
  <div
    className="ic-tag ic-tag-wrapper"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(17,170,187,0.08)",
        "color": "#11AABB",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      我是标签最多七个字
    </span>
  </div>,
  <div
    className="ic-tag ic-tag-wrapper"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(59,153,255,0.08)",
        "color": "#3B99FF",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      我三字
    </span>
  </div>,
  <div
    className="ic-tag ic-tag-wrapper"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(252,51,51,0.08)",
        "color": "#FC3333",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      我是四字
    </span>
  </div>,
  <div
    className="ic-tag ic-tag-wrapper"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#ffa000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      我是五个字
    </span>
  </div>,
]
`;

exports[`筛选标签 1`] = `
Array [
  <div
    className="ic-tag ic-tag-wrapper ic-close-tag"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#ffa000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      我是标签最多七个字
    </span>
    <mock-icon
      className="ic-tag-icon"
      onClick={[Function]}
      size={15}
      type="close_small"
    />
  </div>,
  <div
    className="ic-tag ic-tag-wrapper ic-close-tag"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#FFA000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      我三字
    </span>
    <mock-icon
      className="ic-tag-icon"
      onClick={[Function]}
      size={15}
      type="close_small"
    />
  </div>,
  <div
    className="ic-tag ic-tag-wrapper ic-close-tag"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#FFA000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      我是四字
    </span>
    <mock-icon
      className="ic-tag-icon"
      onClick={[Function]}
      size={15}
      type="close_small"
    />
  </div>,
  <div
    className="ic-tag ic-tag-wrapper ic-close-tag"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#FFA000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      我是五个字
    </span>
    <mock-icon
      className="ic-tag-icon"
      onClick={[Function]}
      size={15}
      type="close_small"
    />
  </div>,
]
`;
